--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla PWA w/ Service worker example</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <h1>Product List</h1>
